--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 decorator==4.0.9
 easypost==3.1.2
 Flask==0.10.1
+funcsigs==1.0.0
 gnureadline==6.3.3
 httplib2==0.9.2
 ipython==4.1.2
@@ -9,7 +10,10 @@ ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mock==2.0.0
+ordereddict==1.1
 pathlib2==2.1.0
+pbr==1.9.0
 pexpect==4.0.1
 pickleshare==0.7.2
 ptyprocess==0.5.1
