--- a/sms_tracking/requirements.txt
+++ b/sms_tracking/requirements.txt
@@ -1,26 +1,5 @@
-appnope==0.1.0
-decorator==4.0.9
-easypost==3.1.2
-Flask==0.10.1
-funcsigs==1.0.0
-gnureadline==6.3.3
-httplib2==0.9.2
-ipython==4.1.2
-ipython-genutils==0.1.0
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-mock==2.0.0
-ordereddict==1.1
-pathlib2==2.1.0
-pbr==1.9.0
-pexpect==4.0.1
-pickleshare==0.7.2
-ptyprocess==0.5.1
-pytz==2016.3
-requests==2.9.1
-simplegeneric==0.8.1
-six==1.10.0
-traitlets==4.2.1
-twilio==5.4.0
-Werkzeug==0.11.5
+easypost==3.6.*
+Flask>=1.0.*,<1.1
+requests>=2.20.0,<3.0
+six>=1.0,<2.0
+twilio>=6.0,<7.0
